[package]
name = "rust-algorithms"
version = "0.1.0"
authors = ["mike zhang <zhangmingkai.1989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.6.5"
criterion = "0.3.3"

[[bench]]
name = "my_benchmark"
harness = false