[package]
name = "my-redis"
version = "0.1.0"
authors = ["mike zhang <zhangmingkai.1989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.3", features=["full"]}
mini-redis = "0.3"
bytes="0.6"
futures="0.3.8"
crossbeam = "0.8.0"